--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>github-file-explorer</title>
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/octicons/3.5.0/octicons.css">
+    <!-- <link rel="stylesheet" href="css/css-loader.css"> -->
   </head>
   <body>
     <div id="app"></div>
